--- a/ProjectUpdate/Project/HTML/about.html
+++ b/ProjectUpdate/Project/HTML/about.html
@@ -90,7 +90,7 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a class="is-active"  href="about.html">ABOUT</a></li>
-                    <li><a href="make-donations.html">MAKE DONATION</a></li>
+                    <li><a href="make-donation.html">MAKE DONATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
 
                   </ul>
